crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__directives__pragma.qasm-parse.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: parse_snap
---
id: tests/snippets/reference/directives/pragma.qasm
expect-parse: Ok
--- parser ---
ok: true
panicked: false
errors: 0
--- ast ---
SOURCE_FILE@0..51: 
pragma IO_BIND[2:3]
#pragma  __directive_info__ 0

PRAGMA_STMT@1..20: pragma IO_BIND[2:3]
PRAGMA_STMT@21..50: #pragma  __directive_info__ 0
